# Cpp-Distributed-GameServe

./: README.md  make-all.sh  test.cpp  test.php  test.yaml
00_01_gcc/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  test
apps/server/: main.cpp  server.cpp  server.h  server.vcxproj
libs/: CMakeLists.txt  def.h  network.h  network.vcxproj  network.vcxproj.filters  network_buffer.cpp  network_connector.h  network_listen.cpp
network/: base_buffer.cpp  base_buffer.h  connect_obj.cpp  disposable.h  network.cpp  network.h  network_buffer.cpp  network_buffer.h  network_connector.cpp  network_connector.h  network_listen.cpp  network_listen.h  packet.h  thread.cpp  thread.h
res/: engine.yaml
res/log4/: log4_allinone.properties  log4_dbmgr.properties  log4_login.properties  log4_robot.properties
src/apps/allinone/: CMakeCache.txt  CMakeLists.txt  Makefile  allinone.vcxproj  allinone.vcxproj.filters  cmake_install.cmake  main.cpp
src/apps/dbmgr/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dbmgr.h  dbmgr.vcxproj  dbmgr.vcxproj.filters  main.cpp  mysql_base.cpp  mysql_base.h  mysql_connector.cpp  mysql_connector.h  mysql_msg.cpp  mysql_table_update.cpp  mysql_table_update.h
src/apps/login/: CMakeCache.txt  CMakeLists.txt  Makefile  account.cpp  account.h  cmake_install.cmake  http_request.cpp  http_request.h  http_request_account.cpp  http_request_account.h  login.h  login.vcxproj  login.vcxproj.filters  login_app.cpp  login_app.h  login_obj.cpp  login_obj.h  login_obj_mgr.cpp  login_obj_mgr.h  main.cpp  test_msg_handler.cpp  test_msg_handler.h
src/apps/server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  server.cpp  server.vcxproj  server.vcxproj.filters
src/libs/libserver/: CMakeCache.txt  CMakeLists.txt  Makefile  app_type_mgr.cpp  app_type_mgr.h  base_buffer.cpp  base_buffer.h  cache_refresh.h  cache_swap.h  cmake_install.cmake  common.h  component.cpp  component.h  component_collections.cpp  component_collections.h  component_factory.h  connect_obj.cpp  connect_obj.h  console.cpp  console.h  console_cmd_pool.cpp  console_cmd_pool.h  console_cmd_thread.cpp  console_cmd_thread.h  console_thread_component.cpp  console_thread_component.h  create_component.cpp  create_component.h  disposable.h  entity.cpp  entity.h  entity_system.cpp  entity_system.h  global.cpp  global.h  libserver.vcxproj  libserver.vcxproj.filters  log4.cpp  log4.h  log4_help.cpp  (+60 more)
src/libs/libserver/protobuf/: build.bat  build.sh  db.pb.cc  db.pb.h  db.proto  msg.pb.cc  msg.pb.h  msg.proto  proto_id.pb.cc  proto_id.pb.h  proto_id.proto
src/libs/network/: CMakeCache.txt  CMakeLists.txt  Makefile  base_buffer.cpp  cmake_install.cmake  connect_obj.cpp  connect_obj.h  (+13 more)
src/tools/robots/: CMakeCache.txt  CMakeLists.txt  Makefile  client.cpp  client.h  client_thread.cpp  cmake_install.cmake  global_robots.cpp  global_robots.h  main.cpp  robot.cpp  robot.h  robot_console.cpp  robot_console.h  robot_console_login.cpp  robot_console_login.h  robot_mgr.cpp  robot_mgr.h  robot_state.cpp  robot_state.h  robot_state_login.cpp  robot_state_login.h  robots.cpp  robots.vcxproj  robots.vcxproj.filters  robots_app.cpp  robots_app.h
tools/robots/: client.cpp  client.h  client_thread.cpp  client_thread.h  robots.cpp  robots.vcxproj
相关介绍/: EntitySystem.md  刷新型数据结构.md  前向声明.md  动态对象池.md  消息队列.md  组件工厂.md
(+9 files in other folders)
